2005-04-09 [holger]	0.2cvs12

	* src/perl_plugin.c
		Make critical warning messages more obvious.

2005-04-06 [holger]	0.2cvs11

	* src/perl_plugin.c
		Open logfile only as needed.
		Set permissions for filter script file and
		logfile to 0600.

2005-04-02 [holger]	0.2cvs10

	* src/perl_plugin.c
	* src/perl_plugin.h
	* sc_perl.pod
		Add logging capability for filters, and
		update the documentation.

2005-03-22 [holger]	0.2cvs9

	* src/perl_plugin.c
	* src/perl_plugin.h			*** NEW FILE ***
		Bring some structure to the source.

2005-03-20 [holger]	0.2cvs8

	* src/perl_plugin.c
		On manual filtering, don't move message to inbox
		during `abort'.

2005-03-19 [holger]	0.2cvs7

	* src/perl_plugin.c
		Don't write to the statusbar on manual filtering,
		because	the text gets stuck.
	
2005-03-19 [holger]	0.2cvs6

	* src/perl_plugin.c
		Add button to open filter scriptfile in
		an external editor upon filter script errors.

2005-03-18 [holger]	0.2cvs5

	* src/perl_plugin.c
	* sc_perl.pod
		Add support for manual filtering invocation,
		update documentation.

2005-02-19 [holger]	0.2cvs4

	* src/perl_plugin.c
		Replace most GLists with GSLists, because I
		iterate in one direction only anyways.
		(hint by Alfons Hoogervorst)

2005-02-18 [holger]	0.2cvs3

	* src/perl_plugin.c
		Remove wrong use of compose struct after
		compose_send(). See version 1.0.1cvs5
		of HEAD.
		(reported by Alfons Hoogervorst)
	
2005-02-13 [holger]	0.2cvs2

	* src/perl_plugin.c
		Replace the strncpy calls with strncpy2 calls
		to make sure string is always null terminated
		(fix by Alfons Hoogervorst)
	
2005-02-12 [holger]	0.2cvs1

	* src/perl_plugin.c
		Don't compare signed and unsigned integers
		(reported by Alfons Hoogervorst)
	
2005-02-11 [holger]	0.2

	0.2 released

2005-02-11 [holger]	0.1.1cvs2

	* INSTALL NEWS configure.ac src/perl_plugin.c
	* NEWS
	* configure.ac
	* src/perl_plugin.c
		Code cleanups

2005-02-06 [holger]	0.1.1cvs1

	* AUTHORS
	* INSTALL
	* Makefile.am
	* README
	* configure.ac